[gd_scene load_steps=11 format=3 uid="uid://b4dpvg0rvrgdg"]

[ext_resource type="Script" uid="uid://b54s3shl0fuvs" path="res://scripts/enemy_base.gd" id="1_kno1i"]
[ext_resource type="FontFile" uid="uid://bbrmpyhagtyct" path="res://font/PIXY.ttf" id="2_w47pe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5pqun"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0emv"]
size = Vector2(176, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txl5k"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yow3x"]
size = Vector2(176, 64.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtex"]
size = Vector2(64, 176)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsyns"]
size = Vector2(64, 176)

[sub_resource type="Animation" id="Animation_xq4ap"]
resource_name = "throw"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dice:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("dice:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-19, -7), Vector2(-19, -20)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dcbly"]
_data = {
&"throw": SubResource("Animation_xq4ap")
}

[node name="enemy_base" type="CharacterBody2D"]
script = ExtResource("1_kno1i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5pqun")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="AreaUP" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaUP"]
position = Vector2(0, -56)
shape = SubResource("RectangleShape2D_x0emv")

[node name="att_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="att_area"]
shape = SubResource("RectangleShape2D_txl5k")

[node name="AreaDOWN" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDOWN"]
position = Vector2(0, 56.125)
shape = SubResource("RectangleShape2D_yow3x")

[node name="AreaLEFT" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLEFT"]
position = Vector2(-56, 0)
shape = SubResource("RectangleShape2D_hqtex")

[node name="AreaRIGHT" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRIGHT"]
position = Vector2(56, 0)
shape = SubResource("RectangleShape2D_jsyns")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="dice" type="Label" parent="."]
visible = false
offset_left = -19.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = -8.0
theme_override_fonts/font = ExtResource("2_w47pe")
theme_override_font_sizes/font_size = 10
text = "10"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dcbly")
}

[connection signal="body_entered" from="AreaUP" to="." method="_on_area_up_body_entered"]
[connection signal="body_exited" from="AreaUP" to="." method="_on_area_up_body_exited"]
[connection signal="body_entered" from="att_area" to="." method="_on_att_area_body_entered"]
[connection signal="body_exited" from="att_area" to="." method="_on_att_area_body_exited"]
[connection signal="body_entered" from="AreaDOWN" to="." method="_on_area_down_body_entered"]
[connection signal="body_exited" from="AreaDOWN" to="." method="_on_area_down_body_exited"]
[connection signal="body_entered" from="AreaLEFT" to="." method="_on_area_left_body_entered"]
[connection signal="body_exited" from="AreaLEFT" to="." method="_on_area_left_body_exited"]
[connection signal="body_entered" from="AreaRIGHT" to="." method="_on_area_right_body_entered"]
[connection signal="body_exited" from="AreaRIGHT" to="." method="_on_area_right_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
